NEWRAIN-4788: broken alignment of header and inventory columns on the list view Fixing overflow of multi-select elements.

--- a/app/styles/_temp.scss
+++ b/app/styles/_temp.scss
@@ -68,7 +68,7 @@
 }
 
 .file-icon {
-  color: #66A2FF;
+  color: $accent3-light;
 }
 
 .file-icon:hover {
